--- a/scDesign3/docs/pkgdown.yml
+++ b/scDesign3/docs/pkgdown.yml
@@ -9,11 +9,14 @@ articles:
   scDesign3-conditionEffect-vignette: scDesign3-conditionEffect-vignette.html
   scDesign3-copulaCompare-vignette: scDesign3-copulaCompare-vignette.html
   scDesign3-introduction-vignette: scDesign3-introduction-vignette.html
+  scDesign3-librarySize-vignette: scDesign3-librarySize-vignette.html
+  scDesign3-marginal-vignette: scDesign3-marginal-vignette.html
   scDesign3-multiomics-vignette: scDesign3-multiomics-vignette.html
   scDesign3-multipleLineages-vignette: scDesign3-multipleLineages-vignette.html
   scDesign3-pseudotimeGOF-vignette: scDesign3-pseudotimeGOF-vignette.html
   scDesign3-scATACseq-vignette: scDesign3-scATACseq-vignette.html
+  scDesign3-spatial-deconvolution: scDesign3-spatial-deconvolution.html
   scDesign3-spatial-vignette: scDesign3-spatial-vignette.html
   scDesign3: scDesign3.html
-last_built: 2023-03-27T07:22Z
+last_built: 2023-04-04T05:02Z
 
