--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ description              : &description "Ph.D. candidate at UCLA"
 url                      : https://SONGDONGYUAN1994.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "SONGDONGYUAN1994/SONGDONGYUAN1994.github.io"
-teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
+teaser                   :  "UCLA_organization.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
 future                   : true
