--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ yandex_site_verification :
 # Social Sharing
 #twitter:
   username               : &twitter
-#facebook:
+facebook:
   username               :
   app_id                 :
   publisher              :
