--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,11 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Softwares"
+    url: /softwares/    
+
+  - title: "Teaching"
+    url: /teaching/    
 
   - title: "Teaching"
     url: /teaching/    
