--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@ main:
   - title: "Teaching"
     url: /teaching/    
 
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "News"
+    url: /news/    
     
  # - title: "Portfolio"
  #   url: /portfolio/
